Issue #616 - Fixed multiline code block overflow

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -57,6 +57,10 @@ code {
 	}
 }
 
+code.hljs {
+	overflow-y: hidden;
+}
+
 pre {
 	display: inline-block;
 	width: 100%;
@@ -3977,12 +3981,4 @@ a.github-fork {
 	.social-login {
 		margin-bottom: 10px;
 	}
-}
-
-.hljs2 {
-	display: block;
-	padding: 0.5em;
-	color: #333;
-	background: #f8f8f8;
-	-webkit-text-size-adjust: none;
 }
